--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
+  height: calc(100vh - 30px);
   max-width: 1280px;
   margin: 0 auto;
   padding: 20px 0;
