--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -4,14 +4,63 @@
   align-items: center;
   padding: 20px 0;
   width: 100%;
-  height: 100%;
+  height: 80%;
 
   .wrapper {
     display: flex;
+    width: 100%;
+    height: 100%;
     flex-wrap: wrap;
     gap: 30px;
+    margin-top: 20px;
+  }
+
+  .search_wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 100%;
-    height: 80%;
-    overflow-y: visible;
+    position: relative;
+
+    .search {
+      padding: 10px 20px;
+      border-radius: 10px;
+      border: 0;
+      background-color: rgb(177, 235, 250);
+      color: white;
+      font-weight: bold;
+      font-size: 18px;
+      text-decoration: none;
+    }
+
+    .disabled {
+      display: none;
+    }
+
+    .cities {
+      display: flex;
+      flex-direction: column;
+      position: absolute;
+      top: 100%;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 200px;
+      background-color: rgb(205, 231, 237);
+      border-radius: 10px;
+      padding: 10px 20px;
+      gap: 10px;
+      list-style: none;
+
+      li {
+        cursor: pointer;
+        padding: 10px;
+        border-radius: 10px;
+
+        &:hover {
+          background-color: rgb(86, 234, 234);
+        }
+
+      }
+    }
   }
 }
