feature delete and pass props to citypage

--- a/src/pages/CityPage/ThisCity.module.scss
+++ b/src/pages/CityPage/ThisCity.module.scss
@@ -22,12 +22,12 @@
   .this__temp {
     font-size: 96px;
     font-weight: 500;
-    color: black;
+    color: whitesmoke;
   }
 
   .this__day_name {
     font-size: 40px;
-    color: black;
+    color: whitesmoke;
   }
 }
 
@@ -35,7 +35,7 @@
 
   .this__time,
   .this__city {
-    color: black;
+    color: whitesmoke;
     font-size: 25px;
   }
 }
