--- a/src/pages/CityPage/ThisCityInfo.module.scss
+++ b/src/pages/CityPage/ThisCityInfo.module.scss
@@ -40,11 +40,11 @@
   }
 
   .indicator__name {
-    color: black;
+    color: whitesmoke;
   }
 
   .indicator__value {
-    color: black;
+    color: whitesmoke;
   }
 }
 
